--- a/front-end/src/components/Uploader/styles.css
+++ b/front-end/src/components/Uploader/styles.css
@@ -1,8 +1,26 @@
-.formContainer {
+.uploadContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     background-attachment: fixed;
     background: #91c5e7;
-    padding: 2rem 0rem 2rem 0rem;
+    padding: 2rem 0rem 1rem 0rem;
+}
+
+.formContainer {
+    display: flex;
+    flex-direction: row;
+    background-attachment: fixed;
+    justify-content: center;
+}
+
+.progressContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0rem 0rem 1rem 0rem;
+}
+
+.hidden {
+    display: none;
 }
