--- a/front-end/src/components/ShowWave/styles.css
+++ b/front-end/src/components/ShowWave/styles.css
@@ -15,11 +15,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 2rem 0rem 2rem 0rem;
 }
 
 .buttonContainer button{
-    margin: 0rem 0.5rem 0rem 0.5rem;
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
 
 .progressContainer {
