--- a/front-end/src/components/Uploader/styles.css
+++ b/front-end/src/components/Uploader/styles.css
@@ -24,3 +24,39 @@
 .hidden {
     display: none;
 }
+
+input[type="file"] {
+    position: fixed;
+    right: 100%;
+    bottom: 100%;
+}
+
+.uploadIcon {
+    padding: 0.5rem, 0.5rem, 0rem, 0rem;
+}
+
+.custom-file-upload {
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+	background-color: transparent;
+	border-radius: 4px;
+	border: 0;
+	box-shadow: inset 0 0 0 1px #ffffff;
+	color: #ffffff !important;
+	cursor: pointer;
+	display: inline-block;
+	font-size: 0.8rem;
+	font-weight: 300;
+	height: 2.75rem;
+	letter-spacing: 0.2rem;
+	line-height: 2.75rem;
+	outline: 0;
+	padding: 0 1.25rem 0 1.35rem;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	white-space: nowrap;
+}
+
+.fromPadding {
+    padding: 0rem 0.5rem;
+}
