--- a/front-end/src/components/Uploader/styles.css
+++ b/front-end/src/components/Uploader/styles.css
@@ -14,6 +14,19 @@
     justify-content: center;
 }
 
+.recordContainer {
+    display: flex;
+    flex-direction: row;
+    background-attachment: fixed;
+    justify-content: center;
+    margin-top: 2.5rem;
+}
+
+.recordTextContainer {
+    margin-top: 0.7rem;
+    margin-right: 1rem;
+}
+
 .progressContainer {
     display: flex;
     flex-direction: row;
