--- a/front-end/src/components/Recorder/styles.css
+++ b/front-end/src/components/Recorder/styles.css
@@ -1,6 +1,7 @@
 .recordContainer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     background-attachment: fixed;
     background: #91c5e7;
     padding: 2rem 0rem 2rem 0rem;
@@ -14,4 +15,12 @@
 .selectContainer {
     margin: 0rem 0.5rem 0rem 0.5rem;
     width: 30%;
+}
+
+.recordingTextContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-attachment: fixed;
+    background: #91c5e7;
 }
