--- a/front-end/src/components/Recorder/styles.css
+++ b/front-end/src/components/Recorder/styles.css
@@ -24,3 +24,10 @@
     background-attachment: fixed;
     background: #91c5e7;
 }
+
+.progressContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0rem 0rem 1rem 0rem;
+}
