--- a/front-end/src/components/NoteShowWave/styles.css
+++ b/front-end/src/components/NoteShowWave/styles.css
@@ -19,6 +19,14 @@
     padding: 1.5rem 0rem 1.5rem 0rem;
 }
 
+.textContainer {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 .buttonContainer button{
     margin: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
